updated at: 2020-02-09 21:55, 朝顔の髪飾り - 和飾ノ助屋 - BOOTH

--- a/VRChat/13/1010313.html
+++ b/VRChat/13/1010313.html
@@ -6,7 +6,7 @@
       朝顔の髪飾り - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PSDファイル ※テクスチャの両面･透過を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面･透過の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。">
+    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PSDファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1010313">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="朝顔の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PSDファイル ※テクスチャの両面･透過を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面･透過の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。">
+    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PSDファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/e150e375-adfb-4aa5-a508-42e36dd213b6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="朝顔の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PSDファイル ※テクスチャの両面･透過を描画する為の Unlitシェーダーを同梱､使用しています。 別のシェーダーを使用する際はテクスチャの両面･透過の 描画ができるシェーダーを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。">
+    "主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。 【ポリゴン数】 ･199 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PSDファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/e150e375-adfb-4aa5-a508-42e36dd213b6_base_resized.jpg">
     <meta property="og:url" content=
@@ -273,15 +273,6 @@
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/3e40d5e3-6e7c-45ca-8db6-28be789e4988_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="朝顔の髪飾り" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/2f6966cb-8eba-47ad-b4df-0d9731e0370d_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -300,10 +291,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/3e40d5e3-6e7c-45ca-8db6-28be789e4988_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1010313/2f6966cb-8eba-47ad-b4df-0d9731e0370d_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -311,20 +298,18 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             主にVRchatでの利用を想定した 朝顔の髪飾り9色の3Dモデルとなります。
-                            【ポリゴン数】 ･199 【ファイル内容】 ･FBX
-                            ･unitypackage ･テクスチャ画像 ･改変用PSDファイル
-                            ※テクスチャの両面･透過を描画する為の
-                            Unlitシェーダーを同梱､使用しています。
-                            別のシェーダーを使用する際はテクスチャの両面･透過の
-                            描画ができるシェーダーを使用してください。 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            【ポリゴン数】 ･199 【使用Shader】
+                            ユニティちゃんトゥーンシェーダー Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【ファイル内容】 ･unitypackage ･改変用PSDファイル
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
                             -更新履歴- 2018.9/12 販売開始 2019.7/18
-                            テクスチャ改変･7色追加･価格改定
+                            テクスチャ改変･7色追加･価格改定 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             質問･不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
