updated at: 2020-02-09 23:16, 桔梗の簪 - 和飾ノ助屋 - BOOTH

--- a/VRChat/79/948679.html
+++ b/VRChat/79/948679.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>
-      桔梗のカンザシ - 和飾ノ助屋 - BOOTH
+      桔梗の簪 - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRchatでの利用を想定した桔梗をモチーフにしたカンザシの3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び">
+    "主にVRchatでの利用を想定した桔梗モチーフの簪の3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/948679">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="桔梗のカンザシ - 和飾ノ助屋 - BOOTH">
+    <meta name="twitter:title" content="桔梗の簪 - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRchatでの利用を想定した桔梗をモチーフにしたカンザシの3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び">
+    "主にVRchatでの利用を想定した桔梗モチーフの簪の3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/09dfe4f0-6752-4557-aa02-c4cb2a416552_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="桔梗のカンザシ - 和飾ノ助屋 - BOOTH">
+    <meta property="og:title" content="桔梗の簪 - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "主にVRchatでの利用を想定した桔梗をモチーフにしたカンザシの3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び">
+    "主にVRchatでの利用を想定した桔梗モチーフの簪の3Dモデルとなります。 【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/09dfe4f0-6752-4557-aa02-c4cb2a416552_base_resized.jpg">
     <meta property="og:url" content=
@@ -130,7 +130,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          桔梗のカンザシ
+                          桔梗の簪
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -223,7 +223,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/948679"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="桔梗のカンザシ | 和飾ノ助屋" data-count=
+                          data-text="桔梗の簪 | 和飾ノ助屋" data-count=
                           "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
@@ -241,7 +241,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="桔梗のカンザシ" class=
+                            <img alt="桔梗の簪" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/09dfe4f0-6752-4557-aa02-c4cb2a416552_base_resized.jpg">
                           </div>
@@ -249,7 +249,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="桔梗のカンザシ" class=
+                            <img alt="桔梗の簪" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/7ffe62d0-c9e7-4a54-ad89-06cba6cfefd4_base_resized.jpg">
@@ -258,7 +258,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="桔梗のカンザシ" class=
+                            <img alt="桔梗の簪" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/8978d41e-bc9c-47e5-aed0-401f223efe66_base_resized.jpg">
@@ -267,7 +267,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="桔梗のカンザシ" class=
+                            <img alt="桔梗の簪" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/2697074d-d1c0-4301-978b-b39ed8f1135f_base_resized.jpg">
@@ -297,15 +297,17 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            主にVRchatでの利用を想定した桔梗をモチーフにしたカンザシの3Dモデルとなります。
-                            【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【ファイル内容】 ･FBX
-                            ･unitypackage ･テクスチャ画像 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            主にVRchatでの利用を想定した桔梗モチーフの簪の3Dモデルとなります。
+                            【ポリゴン数】 ❶‐312 ❷‐383 ❸‐863 【使用Shader】
+                            ユニティちゃんトゥーンシェーダー Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【ファイル内容】 ･unitypackage 【利用にあたって】
+                            〇VRchatへのアップロード 〇アバターペデスタルへの利用
+                            〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ)
+                            〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
+                            -更新履歴- 2018.7/31 販売開始 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             質問･不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
