--- a/VRChat/54/937854.html
+++ b/VRChat/54/937854.html
@@ -6,7 +6,7 @@
       うちわ7種 - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 ･ポリゴン数248 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。 -更新履歴-">
+    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 【ポリゴン数】 ･248 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/937854">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="うちわ7種 - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 ･ポリゴン数248 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。 -更新履歴-">
+    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 【ポリゴン数】 ･248 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/8d5239de-89b0-41d6-80ef-8da7daa1f4f9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="うちわ7種 - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 ･ポリゴン数248 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。 -更新履歴-">
+    "VRchat等での利用を目的としたうちわの3Dモデルとなります。 【ポリゴン数】 ･248 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用PDFファイル 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/8d5239de-89b0-41d6-80ef-8da7daa1f4f9_base_resized.jpg">
     <meta property="og:url" content=
@@ -309,15 +309,6 @@
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/a19ecec0-2b3b-453a-9829-9e5d001306fc_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="うちわ7種" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/ecee589d-afac-46d4-993a-8ef7ca759703_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -352,10 +343,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/a19ecec0-2b3b-453a-9829-9e5d001306fc_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/937854/ecee589d-afac-46d4-993a-8ef7ca759703_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -363,16 +350,18 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             VRchat等での利用を目的としたうちわの3Dモデルとなります。
-                            ･ポリゴン数248 【ファイル内容】 ･FBX ･unitypackage
-                            ･テクスチャ画像 ･改変用PDFファイル 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            【ポリゴン数】 ･248 【使用Shader】
+                            ユニティちゃんトゥーンシェーダー Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【ファイル内容】 ･unitypackage ･改変用PDFファイル
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
                             -更新履歴- 2018.7/20 販売開始 2019.7/20
-                            テクスチャ4種類追加･改変用PDFファイル追加
+                            テクスチャ4種類追加･改変用PDFファイル追加 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             不具合などあればTwitter･メッセージにてご連絡ください。
                             【Twitter】https://twitter.com/Sdnsk
