--- a/VRChat/89/1366989.html
+++ b/VRChat/89/1366989.html
@@ -6,7 +6,7 @@
       牡丹の髪飾り - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※同梱しているshader以外の物を使用する際は テクスチャの両面､透明部分を 描画出来るshaderを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる">
+    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1366989">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="牡丹の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※同梱しているshader以外の物を使用する際は テクスチャの両面､透明部分を 描画出来るshaderを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる">
+    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/78f3f9a6-f02d-4407-905c-ada558e437b5_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="牡丹の髪飾り - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【ファイル内容】 ･FBX ･unitypackage ･改変用psd ･テクスチャ画像 ※同梱しているshader以外の物を使用する際は テクスチャの両面､透明部分を 描画出来るshaderを使用してください。 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる">
+    "主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。 【ポリゴン数】 ･568 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【ファイル内容】 ･unitypackage ･改変用psd 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/78f3f9a6-f02d-4407-905c-ada558e437b5_base_resized.jpg">
     <meta property="og:url" content=
@@ -291,15 +291,6 @@
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/a2981497-b952-4737-9e78-05ab48f51970_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="牡丹の髪飾り" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/abc9d0bf-5823-4079-bd4e-0f562ff61e57_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -326,10 +317,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/a2981497-b952-4737-9e78-05ab48f51970_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1366989/abc9d0bf-5823-4079-bd4e-0f562ff61e57_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -337,17 +324,17 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             主にVRchatでの利用を想定した 牡丹の髪飾り2色の3Dモデルとなります。
-                            【ポリゴン数】 ･568 【ファイル内容】 ･FBX
-                            ･unitypackage ･改変用psd ･テクスチャ画像
-                            ※同梱しているshader以外の物を使用する際は テクスチャの両面､透明部分を
-                            描画出来るshaderを使用してください。 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
-                            5/14 色の一覧画像を追加しました。
+                            【ポリゴン数】 ･568 【使用Shader】
+                            ユニティちゃんトゥーンシェーダー Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【ファイル内容】 ･unitypackage ･改変用psd
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
+                            -更新履歴- 2019.5/13 販売開始 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             質問･不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
