updated at: 2020-02-10 01:03, 缶入りチョコレートの3Dモデル - 穴子電子商会 - BOOTH

--- a/VRChat/43/1295143.html
+++ b/VRChat/43/1295143.html
@@ -297,6 +297,8 @@
                             2019/04/04　v1.01 　　　　　　テクスチャに誤りがったのを修正
                             　　　　　　シェーダーをstandard(Specular
                             setup)を使う形式から通常のstandardを使う形式に変更(合わせてテクスチャの形式が変更されています。)
+                            2020/02/09　v2
+                            　　　　　　UV展開からやり直してマテリアルを1つに纏めなおした
                           </p>
                         </div>
                       </section>
