--- a/VRChat/16/1263216.html
+++ b/VRChat/16/1263216.html
@@ -6,7 +6,7 @@
       烏天狗面 - 和飾ノ助屋 - BOOTH
     </title>
     <meta name="description" content=
-    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。">
+    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･unitypackage ･改変用psdファイル 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1263216">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="烏天狗面 - 和飾ノ助屋 - BOOTH">
     <meta name="twitter:description" content=
-    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。">
+    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･unitypackage ･改変用psdファイル 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/5f4a4d97-40a7-4a16-8241-775894757020_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="烏天狗面 - 和飾ノ助屋 - BOOTH">
     <meta property="og:description" content=
-    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･FBX ･unitypackage ･テクスチャ画像 ･改変用psdファイル 【利用にあたって】 〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。 〇モデルを改変しての利用は可能です。 〇商用利用はデータそのものを販売しない場合は可能です。 〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる 　状態での利用は改変の有無問わず禁止です。 ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。">
+    "VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。 ･ポリゴン数792 【ファイル内容】 ･unitypackage ･改変用psdファイル 【使用Shader】 ユニティちゃんトゥーンシェーダー Ver.2.0.7 https://unity-chan.com/download/releaseNote.php?id=UTS2_0 【利用にあたって】 〇VRchatへのアップロード 〇アバターペデスタルへの利用 〇モデルを改変しての利用 〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用 ×購入者以外の方がデータを取得出来る状態での利用">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/5f4a4d97-40a7-4a16-8241-775894757020_base_resized.jpg">
     <meta property="og:url" content=
@@ -112,18 +112,6 @@
                   <div class="u-d-flex">
                     <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class="u-mb-200">
-                          <div class="eventname-flag">
-                            <a class="eventname-flag--inner"
-                            data-tracking="click"
-                            data-product-list="from market_show via eventname_flag to event_index"
-                            href=
-                            "https://booth.pm/ja/events/v-market2">
-                            <div class="eventname-flag__name">
-                              Vケット2
-                            </div></a>
-                          </div>
-                        </div>
                         <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
@@ -276,15 +264,6 @@
                             "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/576d42bd-e26b-4ad7-a170-f6e217702f7b_base_resized.jpg">
                           </div>
                         </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="烏天狗面" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/ede849ea-1deb-473d-99b1-d00c40ba7c27_base_resized.jpg">
-                          </div>
-                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -299,10 +278,6 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/576d42bd-e26b-4ad7-a170-f6e217702f7b_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/43027730-b2d6-42a7-99e8-a3d369411f2e/i/1263216/ede849ea-1deb-473d-99b1-d00c40ba7c27_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -310,14 +285,17 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             VRchat等での利用を目的とした烏天狗面の3Dモデルとなります。
-                            ･ポリゴン数792 【ファイル内容】 ･FBX ･unitypackage
-                            ･テクスチャ画像 ･改変用psdファイル 【利用にあたって】
-                            〇VRchatへのアップロード､ アバターペデスタルへの利用可能です。
-                            〇モデルを改変しての利用は可能です。
-                            〇商用利用はデータそのものを販売しない場合は可能です。
-                            〇動画制作に利用しても大丈夫です。 ×購入者以外の方が容易にデータを取り出せる
-                            　状態での利用は改変の有無問わず禁止です。
-                            ×同梱されているデータそのものの販売及び 　再配布は改変の有無問わず禁止です。
+                            ･ポリゴン数792 【ファイル内容】 ･unitypackage
+                            ･改変用psdファイル 【使用Shader】 ユニティちゃんトゥーンシェーダー
+                            Ver.2.0.7
+                            https://unity-chan.com/download/releaseNote.php?id=UTS2_0
+                            【利用にあたって】 〇VRchatへのアップロード
+                            〇アバターペデスタルへの利用 〇モデルを改変しての利用
+                            〇商用利用(データそのものを販売しない場合のみ) 〇動画制作での使用
+                            ×購入者以外の方がデータを取得出来る状態での利用
+                            ×同梱されているデータそのものの販売 ×再配布(改変の有無問わず禁止)
+                            -更新履歴- 2019.3/7 販売開始 2020.2/10
+                            ShaderをUTS2に変更
                             -------------------------------------------------
                             不具合などあればご一報ください。
                             【Twitter】https://twitter.com/Sdnsk
