--- a/VRChat/46/1145446.html
+++ b/VRChat/46/1145446.html
@@ -6,7 +6,7 @@
       《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1FPwEBlFVjOnrqauMDPyh1WzP3N9ff0TP38ySq4NRDOs/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1145446">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1FPwEBlFVjOnrqauMDPyh1WzP3N9ff0TP38ySq4NRDOs/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1145446/44e02f58-cfcb-4c72-85f8-b3c6452837e2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】 https://docs.google.com/document/d/1FPwEBlFVjOnrqauMDPyh1WzP3N9ff0TP38ySq4NRDOs/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。">
+    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1145446/44e02f58-cfcb-4c72-85f8-b3c6452837e2_base_resized.jpg">
     <meta property="og:url" content=
@@ -303,6 +303,8 @@
                           <p class="autolink u-text-wrap">
                             ＝＝＝check！！＝＝＝ 【利用規約】
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
+                            【『PMX版』利用規約】
+                            https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/1FPwEBlFVjOnrqauMDPyh1WzP3N9ff0TP38ySq4NRDOs/edit?usp=sharing
                             ＝＝＝check！！＝＝＝ 【注意事項】
