updated at: 2020-02-10 18:57, 《Ver.4.0》ガムラン（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH

--- a/VRChat/69/1126369.html
+++ b/VRChat/69/1126369.html
@@ -6,7 +6,7 @@
       《Ver.4.0》ガムラン（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1126369">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "《Ver.4.0》ガムラン（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1126369/2eadb0ea-4081-4343-90af-121df44d82d1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "《Ver.4.0》ガムラン（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【重要】通常版とDLCを統合。通常版は『全部入り（旧通常版）』DLCは『全部入り（旧DLC）』となりました。 どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1126369/2eadb0ea-4081-4343-90af-121df44d82d1_base_resized.jpg">
     <meta property="og:url" content=
@@ -373,6 +373,8 @@
                             どちらも金額が同じだったため、DLCだったバリエーションにも通常版と同じファイルを入れてあります。
                             【利用規約】
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
+                            【『PMX版』利用規約】
+                            https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/1S3z9Ok0HDtd0ZVxlGV9RAUatdRryJm61ss9hn5hdwVQ/edit?usp=sharing
                             ＝＝＝check！！＝＝＝ 【注意事項】
