updated at: 2020-02-12 16:06, 【VRChat向け】非同心円駆動シェーダー - Koomの魔導書院 - BOOTH

--- a/VRChat/09/1324609.html
+++ b/VRChat/09/1324609.html
@@ -243,6 +243,15 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
+                            <iframe width="560" height="315" src=
+                            "https://www.youtube.com/embed/hrTKFRg9r5Q"
+                            frameborder="0" allowfullscreen
+                            ></iframe>
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
                             <img alt="【VRChat向け】非同心円駆動シェーダー" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/26abfa4a-63b5-42b0-ab43-7f9be12ff8f7/i/1324609/df49d8b2-b613-4bf4-b59e-dd95ea5d58da_base_resized.jpg">
@@ -260,6 +269,9 @@
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
+                        <div class=
+                        "youtube-thumbnail slick-thumbnail-border">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/26abfa4a-63b5-42b0-ab43-7f9be12ff8f7/i/1324609/df49d8b2-b613-4bf4-b59e-dd95ea5d58da_base_resized.jpg">
