updated at: 2020-02-12 17:01, ハロウィンの奴(かぼちゃのお菓子入れ) - めいどのおへやSHOP - BOOTH

--- a/VRChat/63/1042163.html
+++ b/VRChat/63/1042163.html
@@ -6,7 +6,7 @@
       ハロウィンの奴(かぼちゃのお菓子入れ) - めいどのおへやSHOP - BOOTH
     </title>
     <meta name="description" content=
-    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は配布元に帰属します。">
+    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は作者に帰属します。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1042163">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "ハロウィンの奴(かぼちゃのお菓子入れ) - めいどのおへやSHOP - BOOTH">
     <meta name="twitter:description" content=
-    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は配布元に帰属します。">
+    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は作者に帰属します。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9b8ff489-eb05-4473-b3c0-5d27aad2bde4/i/1042163/f9cba2ce-a701-47c9-b144-227208c6efa7_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ハロウィンの奴(かぼちゃのお菓子入れ) - めいどのおへやSHOP - BOOTH">
     <meta property="og:description" content=
-    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は配布元に帰属します。">
+    "・モデル概要 ハロウィン風のかぼちゃのお菓子入れです。 boneが入っているので同梱の説明を参考に「Dynamic Bone」を設定するといい感じに揺れます。 VRChatにてアバターに仕込むことを想定して作りました。 100円の方も中身は一緒でBOOST用です。 ゆるゆるとよろしくおねがいします。 ・利用規約 ・収録されるデータの改変は自由です。 ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。 ・この商品に収録されるデータの権利は作者に帰属します。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/9b8ff489-eb05-4473-b3c0-5d27aad2bde4/i/1042163/f9cba2ce-a701-47c9-b144-227208c6efa7_base_resized.jpg">
     <meta property="og:url" content=
@@ -332,7 +332,7 @@
                             ゆるゆるとよろしくおねがいします。 ・利用規約
                             ・収録されるデータの改変は自由です。
                             ・改変前、改変後を含みこのモデルの販売、再配布を禁止します。
-                            ・この商品に収録されるデータの権利は配布元に帰属します。
+                            ・この商品に収録されるデータの権利は作者に帰属します。
                           </p>
                         </div>
                       </section>
