updated at: 2020-02-12 17:28, KEEP OUTテープParticle - Koomの魔導書院 - BOOTH

--- a/VRChat/14/1321414.html
+++ b/VRChat/14/1321414.html
@@ -293,6 +293,15 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
+                            <iframe width="560" height="315" src=
+                            "https://www.youtube.com/embed/vzbyhrvUJXM"
+                            frameborder="0" allowfullscreen
+                            ></iframe>
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
                             <img alt="KEEP OUTテープParticle" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/26abfa4a-63b5-42b0-ab43-7f9be12ff8f7/i/1321414/8dcfb6d9-2a2e-49ae-aec4-2387d581508e_base_resized.jpg">
@@ -319,6 +328,9 @@
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
+                        <div class=
+                        "youtube-thumbnail slick-thumbnail-border">
+                        </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/26abfa4a-63b5-42b0-ab43-7f9be12ff8f7/i/1321414/8dcfb6d9-2a2e-49ae-aec4-2387d581508e_base_resized.jpg">
