updated at: 2020-02-12 19:43, [VRChat向け]ゴールドベリーちゃん - 芭菜子のお店 - BOOTH

--- a/VRChat/99/949799.html
+++ b/VRChat/99/949799.html
@@ -393,6 +393,15 @@
                             "https://booth.pximg.net/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/261121bf-c32c-46a2-b18a-9d4414d7a987_base_resized.jpg">
                           </div>
                         </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="[VRChat向け]ゴールドベリーちゃん" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/41582305-c3af-4089-bf84-a356585989ed_base_resized.jpg">
+                          </div>
+                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -411,6 +420,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/261121bf-c32c-46a2-b18a-9d4414d7a987_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/41582305-c3af-4089-bf84-a356585989ed_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
